# AICodeReviewCLI

./: .env  .gitignore  README.md  README_zh-TW.md  RELEASE_PROCESS.md  bump_version.py  pyproject.toml  releaseNote.md  runCodeReview.sh
prompts/: custom_prompt.md  default_prompt.md
samples/: sample_review.md
src/codereview_tool/: __init__.py  cli.py  git_utils.py  llm_integration.py
src/local_codereview.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
