[project]
name = "local-codereview"
version = "0.0.1b9"
description = "A local CLI tool for Git-based code reviews with LLM integration."
requires-python = ">=3.9"
dependencies = [
    "questionary",  # For interactive CLI prompts
    "python-dotenv",# For loading .env files
    "google-generativeai", # For Google Gemini API
    "rich", # For rich text and beautiful formatting in the terminal
]

[project.scripts]
codereview = "codereview_tool.cli:main" # Entry point for the CLI

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
